fix header z-index

--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-
+    position: relative;
+    z-index: 1000;
     /* box-shadow: 0px 5px 50px 0 rgba(255, 238, 128, 0.133); */
 }
 
